@@ -1,3 +1,11 @@
+2012-11-07 Miguel de Dios <miguel.dedios@artica.es>
+	
+	* godmode/alerts/configure_alert_command.php, index.php: cleaned
+	source code style.
+	
+	* godmode/alerts/alert_commands.php: fixed the check the name of
+	command that it did not make the update the data.
+
 2012-11-04 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* operation/agentes/status_monitor.php: improved the page status
